# Crown

./: .env.example  .gitignore  CLAUDE.md  README.md  ROADMAP.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  up.sh  vitest.config.ts
.claude/: settings.local.json
anchor/: .gitignore  Anchor.toml  BUILD.md  Cargo.toml  package-lock.json  package.json
anchor/programs/escrow-task/: Cargo.toml
anchor/programs/escrow-task/src/: lib.rs
anchor/tests/: escrow-task.ts
backend/: schema.sql  spec.md
canister/: Cargo.toml  core.did  dfx.json
canister/core/: Cargo.toml
canister/core/src/: arbiter.rs  disputes.rs  donation.rs  escrow_index.rs  governance.rs  http.rs  indexer.rs  lib.rs  reputation.rs  signer.rs  sol_rpc.rs  sol_tx.rs  state.rs
canister/core/tests/: golden.rs
decisions/: 0003-phase2-rpc-bridge-and-in-memory-store.md  0004-phase3-onchain-devnet.md  0005-real-devnet-wallets-no-fixtures.md  0007-fixed-reputation-rate.md  0008-chain-mode-gate-c1.md  0009-fail-closed-money-config.md  0010-per-request-identity.md  0011-audit-ml-hardening.md  0013-local-file-persistence.md  0014-postgres-pglite-persistence.md  0015-games-reputation-seam.md  0017-escrow-onchain-devnet-design.md  0018-home-as-personal-base.md  0019-payout-attestation-export-anchor.md  0020-onchain-reputation-voting.md  0021-icp-canister-architecture.md  0022-crown-frontend-rebrand.md  0023-dispute-rewards-as-governance.md
docs/: audit-map.md  canister-architecture.md  core-spec.md  data-model.md  design-system.md  disclaimers.md  glossary.md  legal-and-risk.md  manual-testing.md  migration-plan.md  onchain-voting-spec.md  runbook.md  trust-layers.md  yellow-paper.md
docs/games/: escrow-task-spec.md  onchain-voting-spec.md
frontend/: screens.md  spec.md  user-flows.md
scripts/: chain-verify.ts  devnet-smoke.ts  escrow-smoke.ts  export-golden.ts  indexer.ts  recover-activation.ts  scan-treasury.ts  snapshot-running.ts  verify-export.ts
src/: instrumentation.ts
src/app/: globals.css  layout.tsx  page.tsx  providers.tsx  template.tsx
src/components/: crown-logo.tsx
src/games/: ChannelGames.tsx  GameActionRail.tsx  GamesList.tsx  bus.test.ts  bus.ts  index.ts  panels.tsx  picker.tsx  registry.ts  types.ts
src/lib/: channel-links.ts  crown.ts  (+5 more)
(+171 files in other folders)
