# Rust-workspace канистр ICP (архитектура v3, ADR 0021; план — docs/migration-plan.md).
# Отдельный workspace от anchor/ — другой тулчейн (wasm32 + dfx, не Solana BPF).
[workspace]
members = ["core"]
resolver = "2"

[profile.release]
# Стандартный профиль канистр: маленький wasm, без паник-размотки.
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
