[package]
# НЕ `core` — имя зарезервировано Rust; канистра в dfx.json всё равно называется "core".
name = "standing-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.22.1"
bs58 = "0.5.1"
candid = "0.10"
ed25519-dalek = { version = "2", default-features = false, features = ["alloc"] }
ic-cdk = "0.20"
ic-cdk-timers = "1.0"
ic-management-canister-types = "0.8"
ic-stable-structures = "0.7"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11.19"
serde_json = "1"
